--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -120,6 +120,20 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-6-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-6-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">4月6日→19.8M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、美国、欧洲、新加坡、日本、加拿大、韩国等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-05">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-5-node-share-links.htm" class="xcblog-blog-url">
@@ -246,20 +260,6 @@
                                     这一次的节点更新覆盖了日本、美国、香港、新加坡、欧洲、韩国、加拿大等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-03-27">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-3-27-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-3-27-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、日本、欧洲、美国、新加坡、韩国、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -270,16 +270,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-69486.htm" title="被宠物猫抓了一下出一点点血（被宠物猫抓一点点血没事吧）">被宠物猫抓了一下出一点点血（被宠物猫抓一点点血没事吧）</a></li>
-                        <li class="py-2"><a href="/news/article-83733.htm" title="猫打3针疫苗多少钱（猫猫打三针多少钱）">猫打3针疫苗多少钱（猫猫打三针多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-94193.htm" title="南京免费领养宠物猫的地方有哪些（南京哪里可以免费领养猫）">南京免费领养宠物猫的地方有哪些（南京哪里可以免费领养猫）</a></li>
-                        <li class="py-2"><a href="/news/article-72094.htm" title="被猫抓伤出一丝丝血要打针吗过了几天了（被猫抓伤有一点点血丝）">被猫抓伤出一丝丝血要打针吗过了几天了（被猫抓伤有一点点血丝）</a></li>
-                        <li class="py-2"><a href="/news/article-80925.htm" title="Python 垃圾回收机制原理详解">Python 垃圾回收机制原理详解</a></li>
-                        <li class="py-2"><a href="/news/article-77469.htm" title="win11系统字体显示不全怎么办">win11系统字体显示不全怎么办</a></li>
-                        <li class="py-2"><a href="/news/article-86598.htm" title="买一个宠物狗粮食（买一点普通的狗粮多少钱一斤）">买一个宠物狗粮食（买一点普通的狗粮多少钱一斤）</a></li>
                         <li class="py-2"><a href="/news/article-71441.htm" title="宠物零食加工厂要投资多少钱一个月（宠物零食加工设备批发）">宠物零食加工厂要投资多少钱一个月（宠物零食加工设备批发）</a></li>
-                        <li class="py-2"><a href="/news/article-88048.htm" title="葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)">葱白煮水治感冒的做法(葱白煮水能治疗感冒吗)</a></li>
-                        <li class="py-2"><a href="/news/article-72093.htm" title="动物疫苗的使用方法及注意事项视频讲解图片下载（动物疫苗知识）">动物疫苗的使用方法及注意事项视频讲解图片下载（动物疫苗知识）</a></li>
+                        <li class="py-2"><a href="/news/article-83027.htm" title="Python 函数进阶-递归函数_在线工具">Python 函数进阶-递归函数_在线工具</a></li>
+                        <li class="py-2"><a href="/news/article-68836.htm" title="动物疫苗法规制定 动物疫苗法规制定依据">动物疫苗法规制定 动物疫苗法规制定依据</a></li>
+                        <li class="py-2"><a href="/news/article-68837.htm" title="动物疫苗是有毒有害吗（动物疫苗的重要性）">动物疫苗是有毒有害吗（动物疫苗的重要性）</a></li>
+                        <li class="py-2"><a href="/news/article-80925.htm" title="Python 垃圾回收机制原理详解">Python 垃圾回收机制原理详解</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-5-free-subscribe-node.htm" title="3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址">3月5日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-82307.htm" title="动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌">动物疫苗经销商有哪些 动物疫苗经销商有哪些品牌</a></li>
+                        <li class="py-2"><a href="/news/article-79532.htm" title="php redis 二进制,关于php:PHP操作redis中bitMap">php redis 二进制,关于php:PHP操作redis中bitMap</a></li>
+                        <li class="py-2"><a href="/news/article-75442.htm" title="家装用什么电线管好一点(家装用什么电线管好呢)">家装用什么电线管好一点(家装用什么电线管好呢)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-14-node-share-links.htm" title="3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">3月14日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -291,7 +291,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">50</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
