--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -453,7 +453,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank"><b>可乐云</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="vyGmgr86" target="_blank"><b>木瓜云</b></a>
                                 </div>
                                 <div class="panel-body">
                                     
@@ -461,41 +461,32 @@
                                         <dt>资费</dt>
                                                                                 <dd>
                                             <p>
-                                                <label>V2【高级用户】：</label> ¥40.00 /月付。 
-                                                                                                每月 300G 流量; 
-                                                                                                全球10个国家接入; 
-                                                                                                99.99% SLA 保证; 
-                                                                                                1Gbps 带宽保证; 
-                                                                                                3个设备 终端在线; 
-                                                                                                IEPL 国际专线; 
+                                                <label>「包周期」500G流量：</label> ¥ 6/月付。 
+                                                                                                套餐流量：500G; 
+                                                                                                流量重置：订单日; 
+                                                                                                在线设备：限2设备; 
                                                                                             </p>
                                         </dd>
                                                                                 <dd>
                                             <p>
-                                                <label>V1【标准用户】：</label> ¥25.00 /月付。 
-                                                                                                每月 120G 流量; 
-                                                                                                全球10个国家接入; 
-                                                                                                99.99% SLA 保证; 
-                                                                                                1Gbps 带宽保证; 
-                                                                                                1个设备 终端在线; 
-                                                                                                IEPL 国际专线; 
+                                                <label>「包周期」2500G流量：</label> ¥ 10/月付。 
+                                                                                                套餐流量：2500G; 
+                                                                                                流量重置：订单日; 
+                                                                                                在线设备：限2设备; 
                                                                                             </p>
                                         </dd>
                                                                                 <dd>
                                             <p>
-                                                <label>V3【尊享套餐】：</label> ¥60.00 /月付。 
-                                                                                                每月 500G 流量; 
-                                                                                                全球10个国家接入; 
-                                                                                                99.99% SLA 保证; 
-                                                                                                1Gbps 带宽保证; 
-                                                                                                5个设备 终端在线; 
-                                                                                                IEPL 国际专线; 
+                                                <label>「包周期」4000G流量：</label> ¥ 15/月付。 
+                                                                                                套餐流量：4000G; 
+                                                                                                流量重置：订单日; 
+                                                                                                在线设备：限2设备; 
                                                                                             </p>
                                         </dd>
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://q0av6w.klwiuehge.top/#/login?code=" data-type="Keleyun" data-code="2gL62wdk" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-type="Mugua" data-code="vyGmgr86" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -562,16 +553,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-76126.htm" title="新疆领养宠物的地方（新疆宠物救助）">新疆领养宠物的地方（新疆宠物救助）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-19-node-share.htm" title="3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址">3月19日→22.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-85881.htm" title="python 在sql语句中使用%s,%d,%f">python 在sql语句中使用%s,%d,%f</a></li>
-                        <li class="py-2"><a href="/news/article-83028.htm" title="广州有领养宠物猫的地方吗?（广州有领养宠物猫的地方吗在哪里）">广州有领养宠物猫的地方吗?（广州有领养宠物猫的地方吗在哪里）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-29-free-node-subscribe.htm" title="3月29日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">3月29日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-84440.htm" title="兽药十大排名（兽药十大排名最新）">兽药十大排名（兽药十大排名最新）</a></li>
+                        <li class="py-2"><a href="/news/article-65668.htm" title="给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）">给宠物打过疫苗还会有传染病么（给宠物打了疫苗还能得狂犬病吗?）</a></li>
                         <li class="py-2"><a href="/news/article-76791.htm" title="python 在sql语句中使用%s,%d,%f">python 在sql语句中使用%s,%d,%f</a></li>
+                        <li class="py-2"><a href="/news/article-68836.htm" title="动物疫苗法规制定 动物疫苗法规制定依据">动物疫苗法规制定 动物疫苗法规制定依据</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-13-node-share.htm" title="4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址">4月13日→21M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-89501.htm" title="谁放弃了《快乐大本营》？(快乐到底是谁)">谁放弃了《快乐大本营》？(快乐到底是谁)</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-27-node-share-links.htm" title="3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">3月27日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-74095.htm" title="妙三多是几联（妙三多是几联疫苗）">妙三多是几联（妙三多是几联疫苗）</a></li>
+                        <li class="py-2"><a href="/news/article-68837.htm" title="动物疫苗是有毒有害吗（动物疫苗的重要性）">动物疫苗是有毒有害吗（动物疫苗的重要性）</a></li>
                         <li class="py-2"><a href="/news/article-70132.htm" title="天津哪能领养狗狗（天津哪里可以领养宠物狗）">天津哪能领养狗狗（天津哪里可以领养宠物狗）</a></li>
-                        <li class="py-2"><a href="/news/article-85880.htm" title="深度学习Pytorch——神经网络">深度学习Pytorch——神经网络</a></li>
-                        <li class="py-2"><a href="/news/article-74096.htm" title="北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）">北京中农大动物医院有限公司招聘电话（北京中农大动物药业官网）</a></li>
-                        <li class="py-2"><a href="/news/article-83733.htm" title="猫打3针疫苗多少钱（猫猫打三针多少钱）">猫打3针疫苗多少钱（猫猫打三针多少钱）</a></li>
                     </ul>
     </div>
 </div>
@@ -583,7 +574,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">45</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                <h4><span class="badge" style="float: right;">50</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">89</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
